@@ -2,6 +2,11 @@
 ** MovieJukebox Release note
 ***************************************************************
 
+MovieJukebox 1.0.16 beta
+------------------------
+  - Fixed defect #383 UTF-8 Encoding for Movie object - Allows extended character sets in the movie details
+
+
 MovieJukebox 1.0.15 beta
 ------------------------
   - Enhancement   #72 Support for multi-episode files and folders
